# qmk-zephyr

./: .gitignore  README.md
firmware/boards/baram/NRF52840/: Kconfig.NRF52840  NRF52840.dts  NRF52840.yml
firmware/nrf52-qmk-fw/: CMakeLists.txt  Kconfig  build.sh  debug.conf  prj.conf  release.sh
firmware/nrf52-qmk-fw/boards/baram/NRF52840/: Kconfig.NRF52840  NRF52840-pinctrl.dtsi  NRF52840.dts  NRF52840_defconfig  board.yml
firmware/nrf52-qmk-fw/boards/baram/wish40/: Kconfig.wish40  board.yml  wish40-pinctrl.dtsi  wish40.dts  wish40.yml  wish40_defconfig
firmware/nrf52-qmk-fw/boards/baram/wish60/: Kconfig.wish60  board.yml  wish60-pinctrl.dtsi  wish60.dts  wish60.yml  wish60_defconfig
firmware/nrf52-qmk-fw/boards/baram/wish65/: Kconfig.wish65  board.cmake  board.yml  wish65-pinctrl.dtsi  wish65.dts  wish65.yml  wish65_defconfig
firmware/nrf52-qmk-fw/docs/: PORTING-NOTES.md
firmware/nrf52-qmk-fw/dts/bindings/: vendor-prefixes.txt
firmware/nrf52-qmk-fw/dts/bindings/gpio/: baram,gpio-595.yaml
firmware/nrf52-qmk-fw/src/ap/: ap.c  ap_def.h
firmware/nrf52-qmk-fw/src/ap/modules/: module.c  module.h
firmware/nrf52-qmk-fw/src/ap/modules/common/cli/: cli.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/: CMakeLists.txt  qmk.c  qmk.h
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish40/: config.cmake  config.h  info.json  keymap.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish40/driver/: rgb_matrix_drivers.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish40/json/: WISH40-VIA.JSON  wish40.json
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish40/port/: via_port.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish60/: config.cmake  config.h  info.json  keymap.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish60/driver/: rgb_matrix_drivers.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish60/json/: WISH60-VIA.JSON  wish60.json
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish60/port/: keycode_port.c  led_port.c  via_port.c  via_port.h
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish65/: config.cmake  config.h  info.json  keymap.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish65/driver/: rgb_matrix_drivers.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish65/json/: WISH65-VIA.JSON  wish65.json
firmware/nrf52-qmk-fw/src/ap/modules/qmk/keyboards/baram/wish65/port/: keycode_port.c  led_port.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/port/: activity.c  activity.h  ble.c  ble.h  driver_ble.c  driver_usb.c  led_port.c  matrix.c  port.h  power.c  power.h  version.h  via_hid.c  via_hid.h  via_port.c  via_port.h
firmware/nrf52-qmk-fw/src/ap/modules/qmk/port/debounce/: debounce_wrapper.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/port/protocol/: host.c
firmware/nrf52-qmk-fw/src/ap/modules/qmk/port/via/: ble_cfg.c  ble_cfg.h  debounce_cfg.c  debounce_cfg.h  hold_okp.c  hold_okp.h  power_cfg.c  power_cfg.h  sys_port.c  sys_port.h  via_hid.c
firmware/nrf52-qmk-fw/src/ap/modules/system/: system.c  system.h
firmware/nrf52-qmk-fw/src/bsp/: bsp.c  bsp.h
firmware/nrf52-qmk-fw/src/common/hw/include/: battery.h  cli.h  ext_power.h  led.h  log.h  ws2812.h
firmware/nrf52-qmk-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/nrf52-qmk-fw/src/hw/driver/: adc.c  battery.c  button.c  eeprom.c  ext_power.c  gpio_595.c  keys.c  led.c  log.c  uart.c  ws2812.c
firmware/nrf52-qmk-fw/src/hw/driver/usb/: usb.c  usb.h
firmware/nrf52-qmk-fw/src/hw/driver/usb/usb_hid/: usb_hid.c  usb_hid.h
